--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "W3CRM",  
+  "name": "W3CRM",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,10 +17,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-beautiful-dnd": "^13.1.4",
-    "axios": "^1.3.5",
+    "axios": "^1.5.0",
     "chart.js": "^4.2.1",
+    "express": "^4.18.2",
     "formik": "^2.2.9",
     "lightgallery": "^2.7.1",
+    "mysql": "^2.18.1",
     "node-sass": "^8.0.0",
     "p-min-delay": "^4.0.2",
     "react": "^18.2.0",
