--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@types/react-beautiful-dnd": "^13.1.4",
     "axios": "^1.5.0",
     "chart.js": "^4.2.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "formik": "^2.2.9",
     "lightgallery": "^2.7.1",
     "mysql": "^2.18.1",
+    "mysql2": "^3.6.0",
     "node-sass": "^8.0.0",
+    "nodemon": "^3.0.1",
     "p-min-delay": "^4.0.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -54,6 +57,7 @@
     "recharts": "^2.5.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "sequelize": "^6.33.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4",
