--- a/back/package.json
+++ b/back/package.json
@@ -15,7 +15,9 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
-    "nodemon": "^3.0.1",
     "sequelize": "^6.33.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
