--- a/back/package.json
+++ b/back/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
+    "react-datepicker": "^4.20.0",
+    "react-input-mask": "^2.0.4",
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
