--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "react-color": "^2.19.3",
     "react-countup": "^6.4.2",
     "react-csv": "^2.2.2",
-    "react-datepicker": "^4.16.0",
+    "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
     "react-dropzone-uploader": "^2.11.0",
     "react-form-stepper": "^2.0.3",
     "react-highlight": "^0.15.0",
+    "react-input-mask": "^2.0.4",
     "react-linear-gradient-picker": "^3.0.1",
     "react-multiselect-dropdown-bootstrap": "^1.1.0",
     "react-redux": "^8.0.5",
